themes/custom/mat/sass/components/paragraphs/_paragraph--basic-page.scss
// ========================================
//
// @file _paragraph--basic-page.scss
// All Basic page, News Article paragraphs
// ========================================

.paragraph--type--landing-page-rich-text,
.paragraph--type--landing-page-image,
.paragraph--type--basic-page-image-and-text,
.paragraph--type--basic-page-video,
.paragraph--type--basic-page-quote,
.paragraph--type--basic-page-iframe,
.paragraph--type--landing-page-form {
  margin-bottom: 4rem;

  &.border-line {
    padding-bottom: 4rem;
    border-bottom: 2px solid $hr-border-color-transparent;
  }
}

// Paragraph Rich text
.paragraph--type--landing-page-rich-text,
.paragraph--type--basic-page-image-and-text {
  // Lists
  ul:not(.contextual-links),
  ol {
    @extend %list-base;
  }

  ul:not(.contextual-links) {
    @extend %list-ul;
  }

  ol {
    @extend %list-ol;
  }
}

// Paragraph Image
.paragraph--type--landing-page-image {
  img {
    margin: 0 auto;
  }
}

// Paragraph Image with Text
.paragraph--type--basic-page-image-and-text {
  @media (min-width: $screen-sm-min) {
    display: flex;
  }

  h4 {
    padding-top: .2rem !important;
  }

  .field--name-field-media {
    margin-bottom: 4.7rem;

    @media (min-width: $screen-sm-min) {
      flex-shrink: 0;
      max-width: 200px;
      margin: 0 3rem 0 1rem;
    }

    img {
      margin: 0 auto;
    }
  }

  &.left {
    @media (min-width: $screen-sm-min) {
      justify-content: space-between;
    }
    
    .field--name-field-media {
      @media (min-width: $screen-sm-min) {
        margin: 0 1rem 0 3rem;
        order: 2;
      }
    }
  }
}

// Paragraph Quote
.paragraph--type--basic-page-quote {
  blockquote {
    margin-bottom: 0!important;
  }

  .quote--footer {
    padding: 3.8rem 0 0 4rem;
    @include font-size(1.4);
    line-height: 2.2;
    font-weight: 500;
    letter-spacing: .13em;
    text-transform: uppercase;
    color: $blue-dark;

    @media (min-width: $screen-sm-min) {
      display: flex;
      padding: 3.5rem 8rem 0 4rem;
    }

    .quote--author {
      @media (min-width: $screen-sm-min) {
        //min-width: 18rem;
        padding-right: 1rem;
      }
    }
  }
}

// Paragraph Iframe
.paragraph--type--basic-page-iframe {
  .field--name-field-iframe {
      position: relative;
      width: 100%;
      height: 0;
      padding-bottom: 56.25%;
  }

  iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
  }
}

